@@ -3,7 +3,7 @@
 options(digits = 5)
 
 ## cases should be named
-load("hills.rda") # copied from package MASS
+hills <- readRDS("hills.rds") # copied from package MASS
 fit1 <- lm(time ~ dist, data = hills)
 set.seed(1)
 simulate(fit1, nsim = 3)
@@ -11,10 +11,14 @@ simulate(fit1, nsim = 3)
 ## and weights should be taken into account
 fit2 <- lm(time ~ -1 + dist + climb, hills[-18, ], weight = 1/dist^2)
 coef(summary(fit2))
-set.seed(1)
-( ys <- simulate(fit2, nsim = 3) )
+set.seed(1); ( ys <- simulate(fit2, nsim = 3) )
 for(i in seq_len(3))
     print(coef(summary(update(fit2, ys[, i] ~ .))))
+## should be identical to glm(*, gaussian):
+fit2. <- glm(time ~ -1 + dist + climb, family=gaussian, data=hills[-18, ],
+             weight = 1/dist^2)
+set.seed(1); ys. <- simulate(fit2., nsim = 3)
+stopifnot(all.equal(ys, ys.))
 
 ## Poisson fit
 load("anorexia.rda") # copied from package MASS
