@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2018-03-29 r74484) -- "Unsuffered Consequences"
+R Under development (unstable) (2018-05-02 r74682) -- "Unsuffered Consequences"
 Copyright (C) 2018 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -20,7 +20,7 @@ Type 'q()' to quit R.
 > options(digits = 5)
 > 
 > ## cases should be named
-> load("hills.rda") # copied from package MASS
+> hills <- readRDS("hills.rds") # copied from package MASS
 > fit1 <- lm(time ~ dist, data = hills)
 > set.seed(1)
 > simulate(fit1, nsim = 3)
@@ -67,8 +67,7 @@ Moffat Chase     134.2882 205.1244 148.7057
        Estimate Std. Error t value   Pr(>|t|)
 dist  4.8999847  0.4737032 10.3440 9.8468e-12
 climb 0.0084718  0.0016869  5.0221 1.8636e-05
-> set.seed(1)
-> ( ys <- simulate(fit2, nsim = 3) )
+> set.seed(1); ( ys <- simulate(fit2, nsim = 3) )
                    sim_1   sim_2   sim_3
 Greenmantle       15.754  13.355  18.247
 Carnethy          51.988  47.396  67.247
@@ -115,6 +114,11 @@ climb 0.0099795  0.0015691    6.36 3.8442e-07
        Estimate Std. Error t value   Pr(>|t|)
 dist  4.8215499   0.420077 11.4778 7.0162e-13
 climb 0.0090388   0.001496  6.0422 9.6065e-07
+> ## should be identical to glm(*, gaussian):
+> fit2. <- glm(time ~ -1 + dist + climb, family=gaussian, data=hills[-18, ],
++              weight = 1/dist^2)
+> set.seed(1); ys. <- simulate(fit2., nsim = 3)
+> stopifnot(all.equal(ys, ys.))
 > 
 > ## Poisson fit
 > load("anorexia.rda") # copied from package MASS
